--- a/public/css/layouts/header.css
+++ b/public/css/layouts/header.css
@@ -1,5 +1,5 @@
 /* desktop version */
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 451px) {
 
     /*i think this goes here similiar to the contact.css one */
 
