--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 450px) {
     #content-wrap {
         position: relative;
         display: flex;
@@ -13,5 +13,30 @@
     .hf-login-submit {
         background-color: #9fdbeb;
         padding: 10px 20px;
+    }
+
+    #content-wrap {
+        padding-bottom: 11rem;    /* Footer height */
+    }
+
+    #footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 11rem;            /* Footer height */
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    #content-wrap {
+        padding-bottom: 35rem;    /* Footer height */
+    }
+
+    #footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 35rem;            /* Footer height */
     }
 }
